--- a/frontend-event-management/src/app/app.component.html
+++ b/frontend-event-management/src/app/app.component.html
@@ -1,2 +1,7 @@
-{{title}}
-<app-login></app-login>
+<div class="screen">
+  <nav class="flex justify-center">
+      <div class="text-CPink">1337 Movies</div>
+  </nav>
+  <router-outlet></router-outlet>
+  <footer>Movies Inc</footer>
+</div>
