--- a/frontend-event-management/src/styles.css
+++ b/frontend-event-management/src/styles.css
@@ -1,1 +1,17 @@
-/* You can add global styles to this file, and also import other style files */
+/* Import Tailwind CSS directives */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* Apply global styles */
+html, body {
+  min-height: 100vh; /* Ensure the height covers the full viewport */
+  margin: 0;
+  padding: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: #3D4EB8; /* Set the desired background color */
+}
+
+.screen {
+  padding: 2rem;
+}
