spring and log in sign up pages

--- a/frontend-event-management/src/app/app.component.html
+++ b/frontend-event-management/src/app/app.component.html
@@ -1,7 +1,7 @@
-<div class="screen">
-  <nav class="flex justify-center">
-      <div class="text-CPink">1337 Movies</div>
+<div class="screen bgImage">
+  <nav class="flex justify-between">
+      <div class="text-CPink font-bold text-xl bg-white p-2 rounded-md cursor-pointer" routerLink="/">1337 Movies</div>
   </nav>
   <router-outlet></router-outlet>
-  <footer>Movies Inc</footer>
+  <!-- <footer class="text-white">Movies Inc</footer> -->
 </div>
