--- a/frontend-event-management/src/app/login/login.component.html
+++ b/frontend-event-management/src/app/login/login.component.html
@@ -1,1 +1,20 @@
-<p>{{login}}</p>
+<form [formGroup]="form" class="flex flex-col items-center gap-4 mt-16">
+  <div class="w-1/4">
+    <input class="w-full rounded-md p-2" type="text" placeholder="Username" formControlName="userName" required>
+    <div *ngIf="fc.userName.touched && fc.userName.invalid">
+      <div class="border-red-400 border-2 bg-red-200" *ngIf="fc.userName.errors?.required">The full name is required</div>
+    </div>
+  </div>
+  <div class="w-1/4">
+    <div class="relative rounded-md w-full">
+      <input class="w-full p-2 rounded-md" [type]="isPasswordVisible? 'text':'password'" placeholder="password" formControlName="password" required>
+      <span class="absolute right-5 top-1/2 -translate-y-1/2 cursor-pointer" (click)="togglePasswordVisiblity()">{{isPasswordVisible?'HIDE':'SHOW'}}</span>
+    </div>
+    <div *ngIf="fc.password.touched && fc.password.invalid">
+      <div class="border-red-400 border-2 bg-red-200" *ngIf="fc.password.errors?.required">The password is required</div>
+      <div class="border-red-400 border-2 bg-red-200" *ngIf="fc.password.errors?.minlength">The password must be at least 8 characters long</div>
+      <div class="border-red-400 border-2 bg-red-200" *ngIf="fc.password.errors?.noSpaceValidation">The password must not have space</div>
+    </div>
+  </div>
+  <button type="submit" class="p-4 border-2 w-80 text-white duration-300" [ngClass]="{'hover:bg-slate-50 hover:text-black': form.valid}" [disabled]="form.invalid" (click)="onSubmit()">Submit</button>
+</form>
