--- a/frontend-event-management/src/styles.css
+++ b/frontend-event-management/src/styles.css
@@ -9,7 +9,7 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  background-color: #3D4EB8; /* Set the desired background color */
+  /* background-color: #3D4EB8;  */
 }
 
 .screen {
